name:                Divan
version:             0.1.0.0
synopsis:            Ottoman Divan poetry vezin (prosody) checker.
description:         Ottoman Divan poetry vezin (prosody) checker.
                     .
                     \Documentation: (<http://joom.github.io/Divan.hs>)
                     .
                     \Repository: (<http://github.com/joom/Divan.hs>)
homepage:            https://github.com/joom/Divan.hs
license:             MIT
license-file:        LICENSE
author:              Cumhur Korkut
maintainer:          cumhurkorkut@gmail.com
copyright:           2014, Cumhur Korkut
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-extensions:  OverloadedStrings
  exposed-modules:     Divan, Divan.Vezin, Divan.Tefile
  build-depends:       base >= 4.7 && <5,
                       text >= 1.1.1.0,
                       Guguk >= 0.0.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -threaded

executable divan
  default-extensions:  OverloadedStrings
  Main-is: Main.hs
  Hs-source-dirs: src
  Build-depends: base,
                 Divan,
                 text,
                 Guguk >= 0.0.0.1
  Default-Language: Haskell2010
  ghc-options: -Wall -threaded

test-suite tests
  default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: tests.hs
  build-depends: base,
                 Divan,
                 Guguk >= 0.0.0.1,
                 HUnit >= 1.2.5.0
  Default-Language: Haskell2010
  ghc-options: -Wall -threaded
